Style trending and annoucment card

--- a/index.html
+++ b/index.html
@@ -279,7 +279,38 @@
                 </div>
                 <div class="trending">
                     <div class="trending-title">Trending</div>
-                    <div class="trending-card">@tegan</div>
+
+                    <div class="trending-card">
+                        <div class="trending-content">
+                            <img class="trending-picture" src=IMGS/businessman-profile.webp >
+                            <div class="contact">
+                                <p class="contact-id">@tegan</p>
+                                <p class="contact-slogan">World Peace Builder</p>
+                            </div>               
+                        </div>
+                        <div class="trending-content">
+                            <img class="trending-picture" src=IMGS/businessman-profile.webp >
+                            <div class="contact">
+                                <p class="contact-id">@tegan</p>
+                                <p class="contact-slogan">World Peace Builder</p>
+                            </div>               
+                        </div>
+                        <div class="trending-content">
+                            <img class="trending-picture" src=IMGS/businessman-profile.webp >
+                            <div class="contact">
+                                <p class="contact-id">@tegan</p>
+                                <p class="contact-slogan">World Peace Builder</p>
+                            </div>               
+                        </div>
+
+
+
+                        
+
+
+
+
+                    </div>
                 </div>
 
              </div>
